# PwZN

./: lab1_MP.py  pyproject.toml
lab1/: lab1_MP.py
lab2/: lab2.py  pyproject.toml
lab3/: lab3.py
lab4/: lab4.py  pyproject.toml
lab5/: lab5.py  pyproject.toml
lab6/: lab6.py  pyproject.toml
lab7/: lab7.py  pyproject.toml
lab8/: lab8_MP.ipynb
lab9/: Untitled.ipynb  lab9_bokeh_final.ipynb
