[tool.poetry]
name = "pwzn-2024"
version = "0.1.0"
description = ""
authors = ["Marcin <marcinpasko31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.4"
tqdm = "^4.66.6"
ascii_graph = "^1.5.1"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
