[tool.poetry]
name = "PwZN_2024"
version = "0.1.0"
description = ""
authors = ["Marcin <marcinpasko31@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.4"
tqdm = "^4.66.6"
ascii_graph = "^1.5.1"
argparse = "^1.4.0"
pillow = "^11.0.0"
numpy = ">=1.22,<2.1"
numba = "^0.60.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
selenium = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
